--- a/bonus-hw/bonus-hw.ipynb
+++ b/bonus-hw/bonus-hw.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Я решил немного поисследовать рынок государственных закупок, а конкретно рынок госзакупок мебели в Москве, для чего с сайта https://zakupki.kontur.ru/Grid?WelcomeView=True я собрал 2 датасета по двум разным процедурам. Первый по аукционам, второй по конкурсам. Сами датасеты я приложил на гитхабе, но, если захочется их скачать нужно зарегистрироваться на сайте и в поле поиска нажать на кнопочку \"показать расширенный поиск\" и вбить следующие параметры: Регион поставки - Москва, Отрасль - мебель (в выпадающем меню слева снизу), этап - только завершены, тип торгов - 44-ФЗ (94-ФЗ), способ отбора - для первой таблицы - конкурс, для второй - аукцион, публиковано - для конкурсов с 1 января 2014, для аукционов - с 22.11.2019 по 08.06.2020, для конкурсов - с 01.02.2014 по 08.06.2020. Далее по поиском справа появится кнопка выгрузить в Excel. Таким образом получим примерно равные по количеству выборки. В обоих датасетах была удалена первая строка для удобства."
+    "I decided to do some research on the government procurement market, and specifically the furniture procurement market in Moscow, for which I collected 2 datasets from the site https://zakupki.kontur.ru/Grid?WelcomeView=True using two different procedures. The first for auctions, the second for competitions. I attached the datasets themselves on the github, but if you want to download them, you need to register on the site and click on the \"show advanced search\" button in the search field and enter the following parameters: Delivery region - Moscow, Industry - furniture (in the drop-down menu on the bottom left), stage - just completed, type of auction - 44-FZ (94-FZ), selection method - for the first table - competition, for the second - auction, published - for competitions from January 1, 2014, for auctions - from 11/22/2019 to 08/06. 2020, for competitions - from 02/01/2014 to 06/08/2020. Further on the search on the right, a button will appear to upload to Excel. Thus, we get approximately equal in number of samples. In both datasets, the first row has been removed for convenience."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Шаг 1"
+    "# Step"
    ]
   },
   {
@@ -432,14 +432,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Шаг 2"
+    "# Step"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Мы имеем таблицы с различной информацией, начиная с номера заявки и заканчивая ценой договора, по государственным закупкам по двум процедурам. Проанализируем пропуски:"
+    "We have tables with various information, starting with the application number and ending with the price of the contract, for public procurement in two procedures. Let's analyze the gaps:"
    ]
   },
   {
@@ -600,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно наблюдать достаточно большое количество пропусков в столбцах \"Название победителя\" и \"СМП\", означающий наличие приоритета для субъектов малого бизнеса. Удалим эти столбцы:"
+    "You can observe a fairly large number of gaps in the columns \"Название победителя\" and \"СМП\", which means that there is a priority for small businesses. Let's remove these columns:"
    ]
   },
   {
@@ -617,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Столбцы \"Процент снижения\" и \"Предложение победителя\" являются ключевыми для нашего исследования, поэтому удалим строки с пропусками данных в столбце \"Предложение победителя\". Отсутствие данных о цене договра говорит о том, что сделка могла не состояться, поэтому удалим отсутствующие строки:"
+    "The \"Процент снижения\" и \"Предложение победителя\" columns are key to our study, so let's remove the rows with missing data in the \"Предложение победителя\" column. The absence of data on the price of the contract indicates that the transaction could not take place, so we will delete the missing lines:"
    ]
   },
   {
@@ -700,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "в итоге осталось 5 пропусков в таблице конкурсов в столбце \"Процент снижения\", говорящий о том насколько предложение победителя ниже стартовой цены. Данные в нем легко восстановить по формуле (НМЦ (начальная максимальная цена) - Предложение победителя) / НМЦ"
+    "As a result, there are 5 gaps left in the table of competitions in the column \"Процент снижения\", indicating how much the winner's offer is lower than the starting price. The data in it is easy to restore using the formula (НМЦ (начальная максимальная цена) - Предложение победителя) / НМЦ"
    ]
   },
   {
@@ -716,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Приведем данные в проценте снижения к процентному виду:"
+    "Let's give the data in percentage reduction to the percentage form:"
    ]
   },
   {
@@ -787,14 +787,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Шаг 3"
+    "# Step"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На основе столбца \"Участники\", где содержатся названия конкурентов, участвующих в закупке, посчитаем их количество и получим стобец \"Конкуренция\":"
+    "Based on the \"Участники\" column, which contains the names of competitors participating in the purchase, we calculate their number and get the \"Конкуренция\" column:"
    ]
   },
   {
@@ -821,7 +821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно заметить, что перед каждым юридическим лицом в участниках стоит его вид: ООО, ЗАО, АО. А данные с ИП указано только ФИО, имеющие перед каждым из слов по пробелу. На основе этих наблюдений и найдем количество участников в каждой закупке:"
+    "You can see that each legal entity in the participants is preceded by its type: LLC, CJSC, JSC. And the data with the IP indicated only the full name, having a space before each of the words. Based on these observations, we will find the number of participants in each purchase:"
    ]
   },
   {
@@ -870,21 +870,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Шаг 4"
+    "# Step"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Попробуем построить диаграммы экономии в зависимости от процедуры. Для этого для наглядности сгруппируем закупки по экономии и найдем их долю от общего числа:"
+    "Let's try to build savings diagrams depending on the procedure. To do this, for clarity, we group purchases by savings and find their share of the total:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Переименуем Колонку \"Процент снижения\" в \"Экономия\" для удобства"
+    "Let's rename the \"Процент снижения\" column to \"Экономия\" for convenience"
    ]
   },
   {
@@ -989,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Также построим гистограммы для каждого случая:"
+    "We will also build histograms for each case:"
    ]
   },
   {
@@ -1044,7 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Также построим графики для конкуренции в каждом из случаев, для начала найдем среднее количество участников для каждой из групп, полученных ранее:"
+    "We will also build graphs for competition in each of the cases, first we will find the average number of participants for each of the groups obtained earlier:"
    ]
   },
   {
@@ -1139,14 +1139,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Шаг 5"
+    "# Step"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На основании приведенных графиков можно выдвинуть гипотезу о том, что экономия и конкуренция имеют положительную корреляция. Проверим это, найдя выборочную корреляция по двум процедурам:"
+    "Based on the above graphs, it can be hypothesized that savings and competition have a positive correlation. Let's check this by finding the sample correlation by two procedures:"
    ]
   },
   {
@@ -1247,14 +1247,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Действительно для аукционов корреляция экономии и конкуренции оказалось достаточно большой, однако для конкурсов она гораздо меньше, но все равно присутствует, что объясняется различиями устройства самих процедур."
+    "Indeed, for auctions, the correlation between savings and competition turned out to be quite large, but for competitions it is much smaller, but still present, which is explained by differences in the design of the procedures themselves."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Также можно выдвинуть гипотезу о том что если взять случайный конкурс, то наиболее вероятно экономия в нем от 0 до 10%, посчитаем моду и другие характеристики выборок:"
+    "It is also possible to put forward a hypothesis that if we take a random competition, then the most likely savings in it are from 0 to 10%, we calculate the mode and other characteristics of the samples:"
    ]
   },
   {
@@ -1545,8 +1545,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Действительно мода экономии конкурса = 6.25%, и она в 2 раза меньше среднего арифметического, в отличие от аукционов где эти параметры равны."
+    "Indeed, the competition savings mode = 6.25%, and it is 2 times less than the arithmetic mean, in contrast to auctions where these parameters are equal."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
